--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,60 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0. ,  0.5,  1. ,  1.5,  2. ,  2.5,  3. ,  3.5,  4. ,  4.5,  5. ,\n",
-       "        5.5,  6. ,  6.5,  7. ,  7.5,  8. ,  8.5,  9. ,  9.5, 10. ])"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = np.linspace(0,10,21) * np.pi\n",
-    "a / np.pi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2. , 0.5, 1. , 1.5, 2. , 0.5, 1. , 1.5, 2. , 0.5, 1. , 1.5, 2. ,\n",
-       "       0.5, 1. , 1.5, 2. , 0.5, 1. , 1.5, 2. ])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = (a \n",
-    "                            + 2*np.pi\n",
-    "                            *np.floor((0/np.pi - a/np.pi) / 2\n",
-    "                              + 1))\n",
-    "a / np.pi"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "complex"
       ]
      },
      "execution_count": 5,
@@ -80,7 +33,8 @@
     }
    ],
    "source": [
-    "int(-0.5)"
+    "x = 2j+4\n",
+    "type(x)"
    ]
   },
   {
@@ -91,7 +45,7 @@
     {
      "data": {
       "text/plain": [
-       "1"
+       "4.0"
       ]
      },
      "execution_count": 6,
@@ -100,7 +54,7 @@
     }
    ],
    "source": [
-    "int(1.9)"
+    "np.real(x)"
    ]
   },
   {
@@ -111,7 +65,7 @@
     {
      "data": {
       "text/plain": [
-       "-1"
+       "array([0.  , 0.25, 0.5 , 0.75, 1.  ])"
       ]
      },
      "execution_count": 7,
@@ -120,7 +74,8 @@
     }
    ],
    "source": [
-    "int(-1.9)"
+    "x = np.linspace(0,1,5)\n",
+    "x"
    ]
   },
   {
@@ -129,19 +84,40 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'floor' is not defined",
+     "data": {
+      "text/plain": [
+       "array([1, 0])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = np.array([1,0])\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (5,) (2,) ",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\laure\\OneDrive\\Bureaublad\\partIII\\TopologicalTightBinding\\test.ipynb Cell 7\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/laure/OneDrive/Bureaublad/partIII/TopologicalTightBinding/test.ipynb#X32sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m floor(\u001b[39m-\u001b[39m\u001b[39m1.9\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'floor' is not defined"
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\laure\\OneDrive\\Bureaublad\\partIII\\TopologicalTightBinding\\test.ipynb Cell 6\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/laure/OneDrive/Bureaublad/partIII/TopologicalTightBinding/test.ipynb#X15sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m x\u001b[39m*\u001b[39;49my\n",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (5,) (2,) "
      ]
     }
    ],
    "source": [
-    "floor(-1.9)"
+    "x*y"
    ]
   },
   {
