Rewrote code in function way in tight_binding2

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,122 +2,99 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "from tight_binding.hamiltonians import static_bloch_hamiltonian_kagome\n",
-    "from tight_binding.hamiltonians import driven_bloch_hamiltonian_kagome\n",
-    "from tight_binding.utilities import compute_reciprocal_lattice_vectors_2D\n",
-    "import matplotlib.pyplot as plt\n",
-    "from tight_binding.utilities import compute_time_evolution_operator\n",
-    "from matplotlib import cm\n",
-    "from tight_binding.solver import driven_bandstructure2D"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "complex"
+       "array([[1, 2],\n",
+       "       [3, 4]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = 2j+4\n",
-    "type(x)"
+    "a = np.array([[1,2],\n",
+    "             [3,4]])\n",
+    "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4.0"
+       "array([[2],\n",
+       "       [4]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.real(x)"
+    "np.transpose([a[:,1]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.  , 0.25, 0.5 , 0.75, 1.  ])"
+       "array([[0, 1],\n",
+       "       [1, 0]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = np.linspace(0,1,5)\n",
-    "x"
+    "M = np.array([[0,1],\n",
+    "              [1,0]])\n",
+    "M"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 0])"
+       "array([[4],\n",
+       "       [2]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y = np.array([1,0])\n",
-    "y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (5,) (2,) ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\laure\\OneDrive\\Bureaublad\\partIII\\TopologicalTightBinding\\test.ipynb Cell 6\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/laure/OneDrive/Bureaublad/partIII/TopologicalTightBinding/test.ipynb#X15sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m x\u001b[39m*\u001b[39;49my\n",
-      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (5,) (2,) "
-     ]
-    }
-   ],
-   "source": [
-    "x*y"
+    "np.transpose([np.dot(M, a[:,1])])"
    ]
   },
   {
