--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,90 +11,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.transpose(np.array([[1,0]]))\n",
+    "b = np.linspace(0,1,11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1, 2],\n",
-       "       [3, 4]])"
+       "array([[1],\n",
+       "       [0]])"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = np.array([[1,2],\n",
-    "             [3,4]])\n",
     "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[2],\n",
-       "       [4]])"
+       "array([0. , 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1. ])"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.transpose([a[:,1]])"
+    "b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0, 1],\n",
-       "       [1, 0]])"
-      ]
-     },
-     "execution_count": 110,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "M = np.array([[0,1],\n",
-    "              [1,0]])\n",
-    "M"
+    "c = np.transpose(np.array([[0,3]])) + b * a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[4],\n",
-       "       [2]])"
+       "array([[1],\n",
+       "       [2],\n",
+       "       [3]])"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.transpose([np.dot(M, a[:,1])])"
+    "np.transpose([np.array([1,2,3])])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d =np.transpose(np.array([[0,1]]))\n",
+    "e = c + d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0. , 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1. ],\n",
+       "       [4. , 4. , 4. , 4. , 4. , 4. , 4. , 4. , 4. , 4. , 4. ]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e"
    ]
   },
   {
@@ -121,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
