--- a/test.ipynb
+++ b/test.ipynb
@@ -11,90 +11,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1, 2],\n",
-       "       [3, 4]])"
+       "array([1.+0.j, 0.+2.j, 3.+0.j, 0.+4.j, 5.+0.j])"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = np.array([[1,2],\n",
-    "             [3,4]])\n",
+    "a = np.array([1,2j,3,4j,5])\n",
     "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[2],\n",
-       "       [4]])"
+       "(-120+0j)"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.transpose([a[:,1]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0, 1],\n",
-       "       [1, 0]])"
-      ]
-     },
-     "execution_count": 110,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "M = np.array([[0,1],\n",
-    "              [1,0]])\n",
-    "M"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[4],\n",
-       "       [2]])"
-      ]
-     },
-     "execution_count": 115,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.transpose([np.dot(M, a[:,1])])"
+    "np.prod(a)"
    ]
   },
   {
