--- a/test.ipynb
+++ b/test.ipynb
@@ -2,96 +2,93 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import scipy.linalg as la"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = np.array([2+3j,4+1j])"
+    "def H(a):\n",
+    "    l_0 = np.array([[1,0,0],\n",
+    "                    [0,1,0],\n",
+    "                    [0,0,1]])\n",
+    "    \n",
+    "    l_1 = np.array([[0,1,0],\n",
+    "                    [1,0,0],\n",
+    "                    [0,0,0]])\n",
+    "    \n",
+    "    l_2 = np.array([[0,-1j,0],\n",
+    "                    [1j,0,0],\n",
+    "                    [0,0,1]])\n",
+    "    \n",
+    "    l_3 = np.array([[1,0,0],\n",
+    "                    [0,-1,0],\n",
+    "                    [0,0,0]])\n",
+    "    \n",
+    "    l_4 = np.array([[0,0,1],\n",
+    "                    [0,0,0],\n",
+    "                    [1,0,0]])\n",
+    "    \n",
+    "    l_5 = np.array([[0,0,-1j],\n",
+    "                    [0,1,0],\n",
+    "                    [1j,0,0]])\n",
+    "    \n",
+    "    l_6 = np.array([[0,0,0],\n",
+    "                    [0,0,1],\n",
+    "                    [0,1,0]])\n",
+    "    \n",
+    "    l_7 = np.array([[0,0,0],\n",
+    "                    [0,0,-1j],\n",
+    "                    [0,1j,0]])\n",
+    "    \n",
+    "    l_8 = np.array([[1,0,0],\n",
+    "                    [0,1,0],\n",
+    "                    [0,0,-2]]) / 3**0.5\n",
+    "    \n",
+    "    H = a[0]*l_0 + a[1]*l_1 + a[2]*l_2 + a[3]*l_3 + a[4]*l_4 + a[5]*l_5 + a[6]*l_6 + a[7]*l_7 + a[8]*l_8\n",
+    "\n",
+    "    return H"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2.+3.j, 4.+1.j])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2., 4.])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.real(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\laure\\AppData\\Local\\Temp\\ipykernel_8036\\4120079232.py:1: ComplexWarning: Casting complex values to real discards the imaginary part\n",
-      "  a.astype('float')\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([2., 4.])"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.astype('float')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def U(a):\n",
+    "    herm = H(a)\n",
+    "    U = la.expm(1j*herm)\n",
+    "    return U, herm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def coefficients(H):\n",
+    "    a = np.zeros(9)\n",
+    "    a[0] = np.real(1 / 3 * (H[0,0] + H[1,1] + H[2,2]))\n",
+    "    a[1] = np.real(H[0,1])\n",
+    "    a[2] = -np.imag(H[0,1])\n",
+    "    a[3] = np.real(1 / 2 * (H[0,0] - H[1,1]))\n",
+    "    a[4] = np.real(H[0,2])\n",
+    "    a[5] = -np.imag(H[0,2])\n",
+    "    a[6] = np.real(H[1,2])\n",
+    "    a[7] = -np.imag(H[1,2])\n",
+    "    a[8] = np.real(1 / (2*3**0.5) * (H[0,0] + H[1,1] - 2*H[2,2]))\n",
+    "    return a"
+   ]
   }
  ],
  "metadata": {
@@ -110,7 +107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
